<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/voltar"
        android:title="@string/voltar"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item
        android:id="@+id/gestaoDeCheckIn"
        android:title="@string/gestaoDeCheckIn"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/lugaresMaisVisitados"
        android:title="@string/lugaresMaisVisitados"
        android:orderInCategory="3"
        app:showAsAction="never"/>

    <item
        android:id="@+id/tiposDeMapa"
        android:title="@string/tiposDeMapa"
        android:orderInCategory="4"
        app:showAsAction="never"/>

</menu>