<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTelaPrincipal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_below="@id/toolbarTelaPrincipal">

        <TextView
            android:id="@+id/nomeDoLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomeDoLocal" />

        <AutoCompleteTextView
            android:id="@+id/edtNomeDoLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoriaDoLocal"
            android:layout_marginVertical="10dp"/>

        <Spinner
            android:id="@+id/spinnerCategoriaDoLocal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posicionamentoGlobal"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_marginVertical="10dp"/>

        <Button
            android:id="@+id/checkIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/checkIn"
            android:layout_marginTop="30dp"
            android:paddingVertical="30dp"
            android:onClick="checkIn"/>

    </LinearLayout>

</RelativeLayout>